<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkpurple"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <TextView
        android:id="@+id/myoutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20sp"
        android:textStyle="italic"
        android:textSize="40dp"
        android:text="Who R U?"
        android:textColor="@android:color/black"
        />

    <TextView
        android:layout_width="wrap_content"
        android:text="Username"
        android:textColor="@android:color/black"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:text="Password"
        android:textColor="@android:color/black"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/bLogin"
        android:text="Login"
        android:textColor="@android:color/black"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvRegisterLink"
        android:layout_width="wrap_content"
        android:text="Register Here"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:text="Forgot Password?"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/output"
        android:layout_width="wrap_content"
        android:text=""
        android:textColor="@android:color/white"
        android:layout_height="wrap_content" />

            </LinearLayout>
    </ScrollView>
    

</LinearLayout>

